--- a/plexe-veins/examples/joinManeuver/omnetpp.ini
+++ b/plexe-veins/examples/joinManeuver/omnetpp.ini
@@ -49,6 +49,63 @@ sim-time-limit = 120 s
 *.manager.autoShutdown = true
 *.manager.margin = 25
 
+
+
+##########################################################
+#                       RSU SETTINGS                     #
+#                                                        #
+#                                                        #
+##########################################################
+*.rsu[0].mobility.x = 1000
+*.rsu[0].mobility.y = 350
+*.rsu[0].mobility.z = 3
+
+#*.rsu[*].appl_type = "TraCIDemoRSU11p"
+#*.rsu[*].appl.headerLength = 80 bit
+#*.rsu[*].appl.sendBeacons = false
+#*.rsu[*].appl.dataOnSch = false
+#*.rsu[*].appl.beaconInterval = 1s
+#*.rsu[*].appl.beaconUserPriority = 7
+#*.rsu[*].appl.dataUserPriority = 5
+
+*.rsu[*].unicast.rng-0 = 1
+*.rsu[*].prot.rng-0 = 2
+*.rsu[*].appl.rng-0 = 3
+#*.rsu[*].scenario.rng-0 = 4
+
+#*.rsu[*].appl_type = "RSUApp"  
+#*.rsu[*].appl.headerLength = 80 bit
+#enable statistics recording for the application
+#*.rsu[*].appl.*.scalar-recording = true
+#*.rsu[*].appl.*.vector-recording = true
+#use the join at back implementation of the join maneuver
+#*.rsu[*].appl.joinManeuver = "JoinAtBack"
+
+*.rsu[*].appl_type = "GeneralPlatooningApp"
+#enable statistics recording for the application
+*.rsu[*].appl.*.scalar-recording = true
+*.rsu[*].appl.*.vector-recording = true
+#use the join at back implementation of the join maneuver
+*.rsu[*].appl.joinManeuver = "RSU_JoinAtBack"
+
+*.rsu[*].protocol_type = "SimplePlatooningBeaconing"
+#enable statistics recording for the network layer
+*.rsu[*].prot.*.scalar-recording = true
+*.rsu[*].prot.*.vector-recording = true
+#set the beaconing interval to be 0.1s
+*.rsu[*].prot.beaconingInterval = ${beaconInterval = 0.1}s
+#access category for platooning beacons
+*.rsu[*].prot.priority = ${priority = 2}
+#packet size for platooning beacon
+*.rsu[*].prot.packetSize = ${packetSize = 200}
+#set to 0 the packet loss rate for the unicast protocol
+*.rsu[*].unicast.packetLossRate = 0
+
+*.rsu[*].helper_type = "LocalPlatoonPositionHelper"
+*.rsu[*].helper_type.RSU_or_Veh = "RSU"
+*.rsu[*].mobility.RSU_or_Veh = "RSU"
+
+
 ##########################################################
 #            11p specific parameters                     #
 #                                                        #
@@ -109,6 +166,8 @@ seed-set = ${repetition}
 ##########################################################
 
 *.node[*].helper_type = "LocalPlatoonPositionHelper"
+*.node[*].helper.RSU_or_Veh = "Veh"
+*.node[*].mobility.RSU_or_Veh = "Veh"
 
 ##########################################################
 #               Scenario common parameters               #
@@ -155,11 +214,11 @@ seed-set = ${repetition}
 *.node[*].prot.*.scalar-recording = true
 *.node[*].prot.*.vector-recording = true
 #set the beaconing interval to be 0.1s
-*.node[*].prot.beaconingInterval = ${beaconInterval = 0.1}s
+*.node[*].prot.beaconingInterval = ${beaconInterval}s
 #access category for platooning beacons
-*.node[*].prot.priority = ${priority = 2}
+*.node[*].prot.priority = ${priority}
 #packet size for platooning beacon
-*.node[*].prot.packetSize = ${packetSize = 200}
+*.node[*].prot.packetSize = ${packetSize}
 #set to 0 the packet loss rate for the unicast protocol
 *.node[*].unicast.packetLossRate = 0
 
