--- a/plexe-veins/examples/joinManeuver/omnetpp.ini
+++ b/plexe-veins/examples/joinManeuver/omnetpp.ini
@@ -17,7 +17,8 @@ print-undisposed = true
 *.playgroundSizeY = 25000m
 *.playgroundSizeZ = 50m
 
-sim-time-limit = 120 s
+#*.manager.firstStepAt = 30s
+sim-time-limit = 250 s
 
 **.debug = false
 **.coreDebug = false
